--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "stripe": "^19.0.0",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^13.0.0"
   }
 }
